--- a/weather-app/Info.plist
+++ b/weather-app/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Usamos sua localização pra buscar a previsão do tempo em sua região.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Usamos sua localização pra buscar a previsão do tempo em sua região.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
